--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Microservice</title>
+    <title>Boilerplate</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -15,10 +15,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
             crossorigin="anonymous"></script>
+    <style>
+        .alert {
+            margin-top: 1rem;
+            margin-bottom: 0;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Microservice</a>
+    <a class="navbar-brand" href="#">Boilerplate</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,6 +35,8 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
+        </ul>
+        <ul class="navbar-nav">
             {% if g.user.is_authenticated %}
                 <li><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
             {% endif %}
@@ -43,13 +51,10 @@
 
 <div id="main" class="container">
     {%- for category, message in get_flashed_messages(with_categories=true) %}
-        <p class="alert alert-{{ "danger" if category == 'error' else "info" }}">{{ "Error: " if category == 'error' }}{{ message }}</p>
+        <p class="alert alert-{{ "danger" if category == 'error' else "info" }}">
+            {{ "Error: " if category == 'error' }}{{ message }}</p>
     {%- endfor %}
     {% block body %}{% endblock %}
-    <hr>
-    <footer id="footer">
-        <p>AIAIAI, 2018</p>
-    </footer>
 </div>
 </body>
 </html>
