--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
-    <form action="" method=post class="form-horizontal">
-        <h2>Signin </h2>
-        <div class="control-group">
-            <div class="controls">
-                <input type="text" id="username" name="username" class="input-xlarge"
-                       placeholder="Enter Username" required>
-            </div>
+    <link rel="stylesheet" href="/static/css/signin.css">
+    <form action="" method=post class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <input type="text" id="username" name="username" class="form-control field-top" placeholder="Username" required
+               autofocus>
+        <input type="password" id="inputPassword" name="password" class="form-control field-bottom" placeholder="Password" required>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
         </div>
-
-        <div class="control-group">
-            <div class="controls">
-                <input type="password" id="password" name="password" class="input-xlarge"
-                       placeholder="Enter Password" required>
-            </div>
-        </div>
-
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn btn-success">Signin</button>
-            </div>
-        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 {% endblock %}
